--- a/app/assets/css/phoenix.css
+++ b/app/assets/css/phoenix.css
@@ -36,6 +36,8 @@ html, body{
 
 html{
   height: 100%;
+  scroll-behavior: smooth;
+
 }
 
 body {
@@ -88,6 +90,11 @@ nav {
 .submission-stats {
     font-size: 0.8em;
     color: #999;
+}
+
+.comment-icon-count {
+    margin-left: 0.5em;
+    margin-right: 0.5em;
 }
 
 span.comment-count {
