--- a/app/lib/app_web/templates/user_section/index.html.eex
+++ b/app/lib/app_web/templates/user_section/index.html.eex
@@ -1,22 +1,25 @@
-<div class="uk-grid-column-medium uk-grid-row-medium uk-child-width-1-3@s uk-grid-match" uk-grid>
-    <%= for {section, i} <- Enum.with_index(@sections) do %>
-    <div>
-        <a href="<%= Routes.section_path(@conn, :show, section.id) %>">
-            <div class="uk-card uk-card-small uk-card-default uk-card-hover color-<%= 1 + rem section.course_num + 1, 20 %>">
-                <div class="uk-card-header">
-                    <div class="uk-width-expand">
-                        <h3 class="uk-card-title uk-margin-remove-bottom">
-                          <%= section.course_dept %><%=  Integer.to_string(section.course_num)  %>
-                        </h3>
-                        <p class="uk-text-meta uk-margin-remove-top uk-margin-remove-bottom">
-                          <%= section.course_name %> &mdash;
-                          <%= section.semester_name %>
-                        </p>
+<%= if length(@sections) == 0 do %>
+  <span>Looks like you don't have any courses yet! Reach out to your professor or TA to get access.</span>
+<% else %>
+    <div class="uk-grid-column-medium uk-grid-row-medium uk-child-width-1-3@s uk-grid-match" uk-grid>
+        <%= for {section, i} <- Enum.with_index(@sections) do %>
+        <div>
+            <a href="<%= Routes.section_path(@conn, :show, section.id) %>">
+                <div class="uk-card uk-card-small uk-card-default uk-card-hover color-<%= 1 + rem section.course_num + 1, 20 %>">
+                    <div class="uk-card-header">
+                        <div class="uk-width-expand">
+                            <h3 class="uk-card-title uk-margin-remove-bottom">
+                            <%= section.course_dept %><%=  Integer.to_string(section.course_num)  %>
+                            </h3>
+                            <p class="uk-text-meta uk-margin-remove-top uk-margin-remove-bottom">
+                            <%= section.course_name %> &mdash;
+                            <%= section.semester_name %>
+                            </p>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </a>
+            </a>
+        </div>
+        <% end %>
     </div>
-    <% end %>
-</div>
-
+<% end %>
