--- a/app/lib/app_web/templates/section/breadcrumbs.html.eex
+++ b/app/lib/app_web/templates/section/breadcrumbs.html.eex
@@ -2,12 +2,16 @@
     <ul class="breadcrumb uk-breadcrumb">
         <li>
             <a href="<%= Routes.user_section_path(@conn, :index) %>">
-                Sections
+                Courses
             </a>
         </li>
         <li>
+            <%= if App.Accounts.can_edit_course(@current_user, @course) do %>
              <a href="<%= Routes.course_path(@conn, :show, @course.id) %>">
-                <%= @course.department %><%= @course.number %>
+             <% else %>
+             <a href="<%= Routes.section_path(@conn, :show, @section.id) %>">
+            <% end %>
+                <%= @course.department <> " " <> Integer.to_string(@course.number) %>
             </a>
         </li>
         <%= if !is_nil(assigns[:section]) do %>
