--- a/app/lib/app_web/templates/comment/form.html.eex
+++ b/app/lib/app_web/templates/comment/form.html.eex
@@ -5,11 +5,15 @@
     </div>
   <% end %>
 
-  <%= label f, :description %>
-  <%= text_input f, :description %>
-  <%= error_tag f, :description %>
+<div class="uk-margin">
+  <%= label f, :description, class: "uk-form-label" %>
+  <div class="uk-form-controls">
+    <%= textarea f, :description, class: "uk-textarea", rows: "6" %>
+    <%= error_tag f, :description %>
+  </div>
+</div>
 
-  <div>
-    <%= submit "Save" %>
+  <div class="uk-margin">
+    <%= submit "Save", class: "uk-button-secondary uk-button" %>
   </div>
 <% end %>
