--- a/app/lib/app_web/templates/helper/multiparagraph_text.html.eex
+++ b/app/lib/app_web/templates/helper/multiparagraph_text.html.eex
@@ -1,3 +1,19 @@
-<%= for para <- split_newlines(@text) do %>
-    <p><%= para %></p>
+<% truncate = assigns[:truncate] %>
+<%= if !is_nil(truncate) && truncate == true do %>
+    <% {was_truncated, paragraphs} = truncate_text(@text, 300, 400) %>
+    <%= for para <- paragraphs do %>
+        <p class="<%= assigns[:pclass] %>">
+            <%= para %>
+            <%= if was_truncated do %>
+            <span class="read-more">
+                ... Read More.
+            </span>
+            <% end %>
+        </p>
+    <% end %>
+<% else %>
+    <%= for para <- split_newlines(@text) do %>
+        <p class="assigns[:pclass]">
+        <%= para %></p>
+    <% end %>
 <% end %>
