--- a/app/lib/app_web/templates/topic/show.html.eex
+++ b/app/lib/app_web/templates/topic/show.html.eex
@@ -40,7 +40,7 @@
                     </div>
                     <div class="uk-card-body">
                         <div class="uk-width-expand">
-                            <%= render AppWeb.HelperView, "multiparagraph_text.html", text: submission.description %>
+                            <%= render AppWeb.HelperView, "multiparagraph_text.html", text: submission.description, truncate: true %>
                         </div>
                     </div>
                     <div class="uk-card-footer">
