--- a/app/lib/app_web/templates/topic/form.html.eex
+++ b/app/lib/app_web/templates/topic/form.html.eex
@@ -5,63 +5,116 @@
     </div>
   <% end %>
 
-  <%= label f, :title %>
-  <%= text_input f, :title %>
+<div class="uk-margin">
+  <%= label f, :title, class: "uk-form-label" %>
+  <div class="uk-form-controls">
+  <%= text_input f, :title, class: "uk-input" %>
   <%= error_tag f, :title %>
+  </div>
+</div>
 
-  <%= label f, :description %>
-  <%= text_input f, :description %>
+<div class="uk-margin">
+  <%= label f, :description, class: "uk-form-label" %>
+  <div class="uk-form-controls">
+  <%= text_input f, :description, class: "uk-input" %>
   <%= error_tag f, :description %>
+  </div>
+</div>
 
-  <%= label f, :slug %>
-  <%= text_input f, :slug %>
+<div class="uk-margin">
+  <%= label f, :slug, class: "uk-form-label" %>
+  <div class="uk-form-controls">
+  <%= text_input f, :slug, class: "uk-input" %>
   <%= error_tag f, :slug %>
+  </div>
+</div>
 
-  <%= label f, :opened_at %>
+<div class="uk-margin">
+  <%= label f, :opened_at, class: "uk-form-label" %>
+  <div class="uk-form-controls">
   <%= datetime_select f, :opened_at, default: {{@current_time.year, @current_time.month, @current_time.day},
-{@current_time.hour, @current_time.minute, @current_time.second}} %>
+{@current_time.hour, @current_time.minute, @current_time.second}}, class: "uk-select" %>
   <%= error_tag f, :opened_at %>
+  </div>
+</div>
 
-  <%= label f, :closed_at %>
+<div class="uk-margin">
+  <%= label f, :closed_at, class: "uk-form-label" %>
+  <div class="uk-form-controls">
   <%= datetime_select f, :closed_at, default: {{@current_time.year, @current_time.month + 1, @current_time.day},
-{@current_time.hour, @current_time.minute, @current_time.second}} %>
+{@current_time.hour, @current_time.minute, @current_time.second}}, class: "uk-select" %>
   <%= error_tag f, :closed_at %>
+  </div>
+</div>
 
-  <%= label f, :allow_submissions %>
-  <%= checkbox f, :allow_submissions %>
+<div class="uk-margin">
+  <%= label f, :allow_submissions, class: "uk-form-label" %>
+  <div class="uk-form-controls">
+  <%= checkbox f, :allow_submissions, class: "uk-checkbox" %>
   <%= error_tag f, :allow_submissions %>
+  </div>
+</div>
 
-  <%= label f, :allow_submission_voting %>
-  <%= checkbox f, :allow_submission_voting %>
+<div class="uk-margin">
+  <%= label f, :allow_submission_voting, class: "uk-form-label" %>
+  <div class="uk-form-controls">
+  <%= checkbox f, :allow_submission_voting, class: "uk-checkbox" %>
   <%= error_tag f, :allow_submission_voting %>
+  </div>
+</div>
 
-  <%= label f, :anonymous %>
-  <%= checkbox f, :anonymous %>
+<div class="uk-margin">
+  <%= label f, :anonymous, class: "uk-form-label" %>
+  <div class="uk-form-controls">
+  <%= checkbox f, :anonymous, class: "uk-checkbox" %>
   <%= error_tag f, :anonymous %>
+  </div>
+</div>
 
-  <%= label f, :allow_submission_comments %>
-  <%= checkbox f, :allow_submission_comments %>
+<div class="uk-margin">
+  <%= label f, :allow_submission_comments, class: "uk-form-label" %>
+  <div class="uk-form-controls">
+  <%= checkbox f, :allow_submission_comments, class: "uk-checkbox" %>
   <%= error_tag f, :allow_submission_comments %>
+  </div>
+</div>
 
-  <%= label f, "Allow students to view submissions from other students" %>
-  <%= checkbox f, :show_user_submissions %>
+<div class="uk-margin">
+  <%= label f, "Allow students to view submissions from other students", class: "uk-form-label" %>
+  <div class="uk-form-controls">
+  <%= checkbox f, :show_user_submissions, class: "uk-checkbox" %>
   <%= error_tag f, :show_user_submissions %>
+  </div>
+</div>
 
-  <%= label f, :user_submission_limit %>
-  <%= number_input f, :user_submission_limit, min: 0 %>
+<div class="uk-margin">
+  <%= label f, :user_submission_limit, class: "uk-form-label" %>
+  <div class="uk-form-controls">
+  <%= number_input f, :user_submission_limit, min: 0, class: "uk-input" %>
   <%= error_tag f, :user_submission_limit %>
+  </div>
+</div>
 
-  <%= label f, :sort %>
-  <%= select f, :sort, @sort_list %>
+<div class="uk-margin">
+  <%= label f, :sort, class: "uk-form-label" %>
+  <div class="uk-form-controls">
+  <%= select f, :sort, @sort_list, class: "uk-select" %>
   <%= error_tag f, :sort %>
+  </div>
+</div>
 
   <%= if String.starts_with?(@action, "/courses") do %>
-    <%= label f, "Post topic to sections" %>
-    <%= multiple_select f, :sections, @sections, selected: @selected_sections %>
+
+  <div class="uk-margin">
+    <%= label f, "Post topic to sections", class: "uk-form-label" %>
+  <div class="uk-form-controls">
+    <%= multiple_select f, :sections, @sections, selected: @selected_sections, class: "uk-select" %>
     <%= error_tag f, :sections %>
+  </div>
+  </div>
   <% end %>
 
-  <div>
-    <%= submit "Save" %>
+  <div class="uk-margin">
+    <%= submit "Save", class: "uk-button-secondary uk-button" %>
   </div>
 <% end %>
