--- a/app/lib/app_web/templates/course/form.html.eex
+++ b/app/lib/app_web/templates/course/form.html.eex
@@ -1,35 +1,58 @@
-<%= form_for @changeset, @action, fn f -> %>
+<%= form_for @changeset, @action, [class: "uk-form-stacked"], fn f -> %>
   <%= if @changeset.action do %>
     <div class="alert alert-danger">
       <p>Oops, something went wrong! Please check the errors below.</p>
     </div>
   <% end %>
 
-  <%= label f, :name %>
-  <%= text_input f, :name %>
-  <%= error_tag f, :name %>
 
-  <%= label f, :department %>
-  <%= text_input f, :department %>
-  <%= error_tag f, :department %>
-
-  <%= label f, :number %>
-  <%= number_input f, :number %>
-  <%= error_tag f, :number %>
-
-  <%= label f, :allow_read %>
-  <%= checkbox f, :allow_read %>
-  <%= error_tag f, :allow_read %>
-
-  <%= label f, :allow_write %>
-  <%= checkbox f, :allow_write %>
-  <%= error_tag f, :allow_write %>
-
-  <%= label f, :semester_id %>
-  <%= select f, :semester_id, @semesters %>
-  <%= error_tag f, :semester_id %>
-
-  <div>
-    <%= submit "Save" %>
+<div class="uk-margin">
+  <%= label f, :name,  class: "uk-form-label"%>
+  <div class="uk-form-controls">
+    <%= text_input f, :name, class: "uk-input" %>
+    <%= error_tag f, :name %>
   </div>
+</div>
+
+<div class="uk-margin">
+  <%= label f, :department, class: "uk-form-label" %>
+  <div class="uk-form-controls">
+    <%= text_input f, :department, class: "uk-input" %>
+    <%= error_tag f, :department %>
+  </div>
+</div>
+<div class="uk-margin">
+  <%= label f, :number, class: "uk-form-label" %>
+  <div class="uk-form-controls">
+    <%= number_input f, :number, class: "uk-input" %>
+    <%= error_tag f, :number %>
+  </div>
+</div>
+<div class="uk-margin">
+  <%= label f, :allow_read, class: "uk-form-label" %>
+  <div class="uk-form-controls">
+    <%= checkbox f, :allow_read, class: "uk-checkbox" %>
+    <%= error_tag f, :allow_read %>
+  </div>
+</div>
+<div class="uk-margin">
+  <%= label f, :allow_write, class: "uk-form-label" %>
+  <div class="uk-form-controls">
+    <%= checkbox f, :allow_write, class: "uk-checkbox" %>
+    <%= error_tag f, :allow_write %>
+  </div>
+</div>
+<div class="uk-margin">
+  <%= label f, :semester_id, class: "uk-form-label" %>
+  <div class="uk-form-controls">
+    <%= select f, :semester_id, @semesters, class: "uk-select"  %>
+    <%= error_tag f, :semester_id %>
+  </div>
+</div>
+
+
+<div class="uk-margin">
+    <%= submit "Save", class: "uk-button-secondary uk-button" %>
+</div>
+
 <% end %>
