--- a/app/lib/app_web/templates/topic/form.html.eex
+++ b/app/lib/app_web/templates/topic/form.html.eex
@@ -48,7 +48,9 @@
 </div>
 
 <div class="uk-margin">
-  <%= label f, :allow_submissions, class: "uk-form-label" %>
+  <%= label f, :allow_submissions, class: "uk-form-label" do %>
+    Allow student submissions to topic
+  <% end %>
   <div class="uk-form-controls">
   <%= checkbox f, :allow_submissions, class: "uk-checkbox" %>
   <%= error_tag f, :allow_submissions %>
@@ -56,7 +58,9 @@
 </div>
 
 <div class="uk-margin">
-  <%= label f, :allow_submission_voting, class: "uk-form-label" %>
+  <%= label f, :allow_submission_voting, class: "uk-form-label" do %>
+    Allow student voting/rating on others' submissions
+  <% end %>
   <div class="uk-form-controls">
   <%= checkbox f, :allow_submission_voting, class: "uk-checkbox" %>
   <%= error_tag f, :allow_submission_voting %>
@@ -64,7 +68,9 @@
 </div>
 
 <div class="uk-margin">
-  <%= label f, :anonymous, class: "uk-form-label" %>
+  <%= label f, :anonymous, class: "uk-form-label" do %>
+    Student submissions are anonymous
+  <% end %>
   <div class="uk-form-controls">
   <%= checkbox f, :anonymous, class: "uk-checkbox" %>
   <%= error_tag f, :anonymous %>
@@ -72,7 +78,10 @@
 </div>
 
 <div class="uk-margin">
-  <%= label f, :allow_submission_comments, class: "uk-form-label" %>
+  <%= label f, :allow_submission_comments, class: "uk-form-label" do %>
+      Allow student to comment on others' submissions
+  <% end %>
+
   <div class="uk-form-controls">
   <%= checkbox f, :allow_submission_comments, class: "uk-checkbox" %>
   <%= error_tag f, :allow_submission_comments %>
@@ -88,7 +97,9 @@
 </div>
 
 <div class="uk-margin">
-  <%= label f, :user_submission_limit, class: "uk-form-label" %>
+  <%= label f, :user_submission_limit, class: "uk-form-label" do %>
+    Max number of submissions by a single student (default unlimited)
+  <% end %>
   <div class="uk-form-controls">
   <%= number_input f, :user_submission_limit, min: 0, class: "uk-input" %>
   <%= error_tag f, :user_submission_limit %>
@@ -96,7 +107,10 @@
 </div>
 
 <div class="uk-margin">
-  <%= label f, :sort, class: "uk-form-label" %>
+  <%= label f, :sort, class: "uk-form-label" do %>
+      Sort order for student submissions in this topic
+  <% end %>
+
   <div class="uk-form-controls">
   <%= select f, :sort, @sort_list, class: "uk-select" %>
   <%= error_tag f, :sort %>
