--- a/app/lib/app_web/templates/submission/show.html.eex
+++ b/app/lib/app_web/templates/submission/show.html.eex
@@ -11,12 +11,15 @@
             <b><%= @submission.user_display_name %></b>
             /
             <% end %>
-            <%= if @submission.rating_count > 0 do %>
+            <%= cond do %>
+            <%= @submission.rating_count > 0 -> %>
             <%= stars @submission.avg_rating %>
             (<%= @submission.rating_count |> Integer.to_string %>
              <%= if @submission.rating_count > 1 do %>ratings<% else %>rating<% end %>)
-            <% else %>
+            <% @topic.allow_submission_voting -> %>
                 No ratings yet.
+            <% true -> %>
+
             <% end %>
             |
             <span>Posted at </span><span class="rating"><%= @submission.inserted_at %>
@@ -32,7 +35,8 @@
 </div>
 
 
-<%= if length(@comments) != 0 do %>
+<%= cond do %>
+<% length(@comments) != 0 -> %>
     <h2>
     Comments
     <span class="comment-count">(<%= @submission.comment_count |> Integer.to_string %>)</span>
@@ -50,7 +54,7 @@
                 <div class="comment-author comment-author-<%= if rem(i+1, 2) == 0 do %>even<% else %>odd<% end %>">
                     <%= if @topic.anonymous do %>
                             <% else %>
-                            <b><%= comment.user_id %></b>
+                            <b><%= comment.user.display_name %></b>
                             /
                      said <br>
                     at
@@ -67,7 +71,9 @@
             </li>
         <% end %>
     </ul>
-<% else %>
+<% @topic.allow_submission_comments == false -> %>
+
+<% true -> %>
 <h2>
 Comments
 </h2>
@@ -77,6 +83,7 @@ Comments
 </p>
 <% end %>
 
+<%= if @topic.allow_submission_voting do %>
 <div class="form">
 <a name="newrating"></a>
 <% action = if is_nil(@my_rating) do
@@ -115,7 +122,9 @@ end %>
 
 <% end %>
 </div>
+<% end %>
 
+<%= if @topic.allow_submission_comments do %>
 <div>
     <a name="newcomment"></a>
     <%= form_for @comment_changeset, Routes.submission_comment_path(@conn, :create, @submission.id), [class: "uk-form-stacked"], fn f -> %>
@@ -146,6 +155,7 @@ end %>
 
 <% end %>
 </div>
+<% end %>
 
 <div class="uk-position-fixed uk-position-z-index absolute uk-dark uk-position-bottom-right">
 <a href="#newcomment" class="add uk-box-shadow-small uk-box-shadow-hover-large" uk-marker></a>
