--- a/app/lib/app_web/templates/page/index.html.eex
+++ b/app/lib/app_web/templates/page/index.html.eex
@@ -11,52 +11,15 @@
       </div>
     </div>
 </section>
-<section class="uk-section uk-section-muted uk-padding-remove-bottom">
+<section class="uk-section uk-section-muted uk-padding-remove-bottom uk-padding-remove-top">
 			<div class="uk-container uk-container-small">
-				<header class="uk-text-center">
-					<h1 class="uk-heading-primary">Features</h1>
-				</header>
-				<div class="uk-grid uk-grid-small uk-child-width-1-3@m uk-margin-medium-top uk-grid-match uk-grid-stack" data-uk-scrollspy="cls: uk-animation-slide-bottom-small; target: > div > .uk-card; delay: 200" data-uk-grid="">
-
-					<!-- feature card -->
-					<div class="uk-first-column">
-						<div class="uk-card uk-card-default uk-card-hover uk-flex uk-flex-column uk-scrollspy-inview uk-animation-slide-left-small" data-uk-scrollspy-class="uk-animation-slide-left-small" style="">
-							<div class="uk-card-header uk-text-center">
-								<h4 class="uk-text-bold">Mobile-friendly</h4>
-							</div>
-							<div class="uk-card-body uk-flex-1">
-								<p>Designed for mobile first, Yale Chat is easy to use on any device.</p>
-							</div>
-						</div>
-					</div>
-					<!-- /feature card -->
-          <!-- feature card -->
-					<div class="uk-first-column">
-						<div class="uk-card uk-card-default uk-card-hover uk-flex uk-flex-column uk-scrollspy-inview uk-animation-slide-left-small" data-uk-scrollspy-class="uk-animation-slide-left-small" style="">
-							<div class="uk-card-header uk-text-center">
-								<h4 class="uk-text-bold">Customized for Yale</h4>
-							</div>
-							<div class="uk-card-body uk-flex-1">
-								<p>You'll log in with your net id and have access to all your classes that use Yale Chat from one convenient dashboard.<br/><br/>Since it's developed by a team at Yale SOM, new features tailored to your class needs can be implemented quickly.</p>
-							</div>
-						</div>
-					</div>
-					<!-- /feature card -->
-          <!-- feature card -->
-					<div class="uk-first-column">
-						<div class="uk-card uk-card-default uk-card-hover uk-flex uk-flex-column uk-scrollspy-inview uk-animation-slide-left-small" data-uk-scrollspy-class="uk-animation-slide-left-small" style="">
-							<div class="uk-card-header uk-text-center">
-								<h4 class="uk-text-bold">Simple</h4>
-							</div>
-							<div class="uk-card-body uk-flex-1">
-								<p>Free from the clutter of many similar apps (looking at you, Slack), Yale Chat is solely focused on in-class communication between students and professors.</p>
-							</div>
-						</div>
-					</div>
-					<!-- /feature card -->
-
-				</div>
-				<div class="uk-text-center uk-text-small uk-text-muted uk-section uk-section-small"><a href="/auth/cas">Log in</a> to get started!
+				<div class="uk-text-center uk-text-small uk-text-muted uk-section uk-section-small">
+				The website you're using is an experimental piece of software we hope will be helpful during the COVID-19 crisis (and afterward!).
+				<br/>It is being developed by SOMers <a href="https://github.com/nperanzi">Nick Peranzi</a> and <a href="https://github.com/kljensen">Kyle Jensen</a>.
+				<br/>
+				<br/>We'd like your advice! What should an app like this include? Right now we're thinking about polls, live chat, private chat, and emojis. (Emojis are top priority, of course.)
+				<br/>
+				<br/>What do you want to see in a communications platform for class? <a href="mailto:nick.peranzi@yale.edu;kyle.jensen@yale.edu?Subject=Yale.chat%20Feature%20Request" target="_top">Please tell us!</a>
 				</div>
 			</div>
 		</section>
